--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Node modules
+node_modules/
 
-node_modules
-
+# Environment variables
 .env
+
+# Log files
+logs/
+
+# Build files
+build/
+dist/
+
+# Dependency lock files
+package-lock.json
+yarn.lock
+
+# IDE files
+.idea/
+.vscode/
+
+# Mac files
+.DS_Store
