--- a/package.json
+++ b/package.json
@@ -2,19 +2,28 @@
   "name": "milk-tea-shop-be",
   "version": "1.0.0",
   "main": "json-sv-ext.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon json-sv-ext.js",
-    "server" : "json-server --watch db.json",
+    "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
   "dependencies": {
-    "fs": "^0.0.1-security",
-    "json-server": "^0.17.4",
-    "json-server-auth": "^2.1.0",
-    "jwt-decode": "^4.0.0"
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.19.2",
+    "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.4",
+    "uuid": "^11.1.0",
+    "vite-plugin-node": "^4.0.0"
   }
 }
