--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ MONGO_URI=
 
 ACCESS_TOKEN_EXPIRE=
 ACCESS_TOKEN_SECRET=
+
+
+
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
